# cinemabot

./: .dockerignore  .gitignore  BOT_README.md  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  example.Dockerfile  pyproject.toml
.github/workflows/: code-quality.yml
cinemabot/: __main__.py  bot.py  dependencies.py  state.py
cinemabot/config/: __init__.py  bot_mixin.py  kinopoisk_mixin.py  main_settings.py  postgres_mixin.py
cinemabot/data_sourses/kinopoisk_api/: client.py  errors.py
cinemabot/data_sourses/utils/: __init__.py  base_client.py
cinemabot/database/: base.py  connector.py  core.py  mixins.py  models.py
cinemabot/database/pool_manager/: README.md  aiopg.py  aiopg_sa.py  base.py
cinemabot/database/pool_manager/balancer_policy/: __init__.py  base.py  greedy.py
cinemabot/database/pool_manager/utils/: __init__.py  dsn.py  stopwatch.py
cinemabot/domain/repository/: storage.py
cinemabot/handlers/: __init__.py  find.py  help.py  history.py  start.py  stats.py  utils.py
cinemabot/handlers/utils/: __init__.py  process_film_info.py  state.py
cinemabot/handlers/utils/keyboard_markup/: __init__.py  find.py  history.py  stats.py
cinemabot/infrastructure/: logs.py  settings.py
cinemabot/infrastructure/clients/: base.py  kinopoisk.py
cinemabot/infrastructure/database/: schemas.py  session_provider.py
cinemabot/infrastructure/database/migrations/: __init__.py  __main__.py  env.py
cinemabot/infrastructure/database/migrations/versions/: 2025-04-09_initial.py
cinemabot/infrastructure/repository/: storage.py
cinemabot/migrator/: alembic.ini  env.py
cinemabot/migrator/versions/: 2022-12-12_create_new_entities.py  2022-12-13_add_views_number.py
conf/: .env.example
docker/: entrypoint.sh  start.sh
tests/: conftest.py  test_linting.py
tests/fixtures/: __init__.py  film.py  mock_kinopoisk_api.py  user.py  user_film_view.py
tests/test_database_core/: test_film.py  test_film_views.py  test_search_history.py  test_user.py
tests/test_handlers/: test_start.py
tests/test_migrations/: test_model_definition_match_ddl.py  test_stairway.py
tests/utils/: __init__.py  alembic.py  clear_database.py  dsn.py  fake_telegram.py
